style.css
html
{
    scroll-behavior: smooth;
    overflow-x:hidden;
}



*{
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
}

body
{
    font-family: "poppins","sans-serif";
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
    max-width: 100%;
}

.logo
{
    font-size: 2rem;
}

.nav
{
    margin: 0 10rem;
    display: flex;
    justify-content:space-between ;
    height: 17vh;
    align-items: center;
}

.items .item
{
    display: inline-block;
    padding: 10px;

}


.items 
{
    display: flex;
    justify-content: space-around;
}

.item a , .logo a
{
    text-decoration: none;
    color: black;
}


.profile
{
    display: flex;
    align-items: center;
    justify-content: center;
    height:85vh;
    flex-wrap: wrap;
    gap: 6rem;
}
.profile-image
{
    height: 400px;
    width: 400px;
    background-image: url("assests/images/profile.png");
    background-size: cover;
    background-position: top center;
    background-repeat: no-repeat;
    border-radius: 205px;

}

.profile-info
{
    text-align: center;
    line-height: 1;
    /*font-weight: 600;*/
}


p {
    color: rgb(85, 85, 85);

}


.btn-color-2
{
    background-color: white;
    color: black;

}

.btn-color-2:hover
{
    background-color: black;
    color: white;
    transform: scale(1.05);
}

.btn:hover
{
    cursor: pointer;
}

.btn-color-1

{
    background-color: black;
    color: white;
    
}


.button-container
{
    display: flex;
    justify-content: center;
    gap: 20px; 
}


.btn {
    font-weight: 600;
    transition: all 300ms ease;
    padding: 1rem;
    width: 8rem;
    border-radius: 2rem;
}

.name

{
    font-size: 3rem;
    margin-bottom: 1rem;
}

.title , .subtitle
{
    display: flex;
    justify-content: center;
}

.title
{
    font-size: 21px;
    letter-spacing:1px;
}


.social-media-container
{
    display: flex;
    justify-content: center;
    gap: 10px;
    margin-top: 1.5rem;
}
.social-media-container img
{
   height: 30px;
   width: 30px;
}

.social-media-container a:hover
{
    scale: 1.1;
    animation-duration: 300;
}

.Rectangle-Image-container {
    width: 100%; /* Container width adjusts to its parent */
    max-width: 400px; /* Limit the maximum width */
    aspect-ratio: 1 / 1; /* Maintain a square aspect ratio */
    overflow: hidden; /* Hide any overflow */
    border-radius: 2rem; /* Rounded corners */
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto; /* Center horizontally */
}

.Rectangle-Image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover; /* Ensures the image covers the container without distortion */
}



.about-container
{
    display: flex;
    align-items: center;
    justify-content: center;
    gap:3rem;
    margin-left: 7vw;
    margin-top: 32px;
    flex-wrap: wrap;
    flex-grow: 1;
}


.about-text-container {
    flex: 2; /* Text container takes up 2 parts of the available space */
    font-family: 'Poppins', sans-serif;
    padding-right: 5vw;
}


.about-text-container p {
    margin: 10px 0;
    line-height: 1.6;
 /* Improve readability */
}

#college
{
    margin: 0px;
}

.skills-container
{
    display: flex;
    justify-content: center;
    gap:4.5rem;
    flex-wrap: wrap;


}

.languages, .tools
{   
    padding: 1.5rem;
    flex: 1;
    background: white;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: rgb(163, 163, 163);
    text-align: center;
    margin-top: 2rem;


}


#skills
{
    padding-top: 4vh;
    height: 85vh;
    margin: 0 10rem;
    box-sizing: border-box;
    
}




.item
{
    display: flex;
    justify-content: center;
    text-align: left;
    margin: 2rem;
}

.item img 
{
    margin-right: 3px;
}

.list-container
{
    display: flex;
    justify-content: space-between;
    gap: 5rem;
}

.project
{
    padding: 1.5rem;
    flex: 1;
    background: white;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: rgb(163, 163, 163);
    text-align: center;
   
}

.projects-container

{
    display: flex;
    justify-content: center;
    gap: 3rem;
    margin-top: 30px;
    padding: 0 10rem;
    flex-wrap: wrap;
    flex-shrink: 1;
}

.project-image img
{
    height: 90%;
    width: 90%;
    border-radius: 2rem;
}

.project button
{
    margin-top: 3px;
}

.project p
{
    margin-bottom: 3%;
    margin-top: 3%;
}

#contact
{
    height: 90vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.contact-details-container{
    margin: 1.5rem 0rem;
    display: flex;
    flex-direction: row;
    justify-items: center;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: rgb(163, 163, 163);
    border-radius: 2rem;
    padding: 1.5rem;
    gap: 1.5rem;
    align-self: center;

}

.email-details , .linkedin-details
{
    display: flex;
    gap: 0.5rem;
    align-items: center;
    font-size: 600;
}

.text a {
    font-size: 21px;
}

#contact .subtitle
{
    margin-top: 3%;
}

.footer-nav
{
    display: flex;
    justify-content: center;
}

.item > a:hover {
    color: grey;
    text-decoration: underline;
    text-underline-offset: 1rem;
    text-decoration-color: rgb(181, 181, 181);

}

a
{
    transition: all 300ms ease;
}

.menuicon
{
    display: none !important;
}


@media all and (max-width:800px)
{

    .hideonphone
    {
        display: none !important;
    }
    .menuicon 
    {
        display: block !important;
    }

    .nav
    {
        margin: 0 0rem 0rem 3rem;
    }

    .languages , .tools
    {
        margin: 31px auto !important;
        padding: 15px;
        
    }

    .list-container
    {
        padding: 19px !important;
        gap:2rem !important;
    }

    .skills-container
    {
        gap: 1rem;
    }
}


@media (max-width: 768px) {
    .Rectangle-Image-container {
        max-width: 300px; /* Reduce the container size on smaller screens */
        border-radius: 1.5rem; /* Slightly smaller border radius */
    }
}

@media (max-width: 480px) {
    .Rectangle-Image-container {
        max-width: 200px; /* Further reduce size for very small screens */
        border-radius: 1rem;
    }

    .profile-image
    {
        height: 250px;
        width: 250px;
    }

}

/* Side panel hidden by default */
.side-panel {
    height: 100%; /* Full-height */
    width: 0; /* Initially hidden */
    position: fixed; /* Stay in place */
    z-index: 1; /* On top */
    top: 0;
    right: 0;
    background-color: #111; /* Black background color */
    overflow-x: hidden; /* Disable horizontal scroll */
    transition: 0.5s; /* Smooth sliding */
    padding-top: 60px; /* Space for top padding */
}

/* Links inside the side panel */
.side-panel a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s;
}

/* Highlight links on hover */
.side-panel a:hover {
    color: #f1f1f1;
}

/* Close button */
.side-panel .closebtn {
    position: absolute;
    top: 0;
    left: 0;
    font-size: 36px;
}



img {
    max-width: 100%;
    height: auto;
}


@media (max-width: 822px){
    #about {
        /* margin-top: 30vh; */
        margin-top:8vh; /* Slightly larger heights */
    }

    .about-container
    {
        display: block;
    }

    .about-text-container {
        margin-top: 3rem;
    }

    #projects
    {
        margin-top : 20vh;
    }

    .projects-container
    {
        padding: 0 4rem;
    }

    .contact-details-container
    {
        flex-direction: column;
    }
}

@media (min-width: 401px) and (max-width: 822px) {
    #about {
        margin-top: 21vh; /* Adjust as needed for this range */
    }
    
}


@media (max-width: 400px) {
    #about {
        margin-top: 8vh; /* Adjust for smaller heights */
    }

    
}


@media (max-width: 1326px) {
    #projects {
        margin-top: 57vh; /* Increase spacing for smaller screens */
    }

    .item
    {
        margin: 15px;
    }
}

